--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -1,50 +1,101 @@
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  SETTINGS ICONS  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
-<div *ngIf="bmxClientPageOverview">
-    <button (click)="selectedIndex = ''" class="add-column" matTooltip="cancel" matTooltipPosition="above"
-        style=" margin: -50px 29px;" *ngIf="i === selectedIndex" mat-icon-button>
-        <mat-icon style="font-size: 25px;" class="full-icon">check_circle</mat-icon>
-    </button>
-    <button (click)="selectedIndex = i" class="add-column" matTooltip="edit table content & settings"
-        matTooltipPosition="above" style=" margin: -50px 29px;" *ngIf="i !== selectedIndex" mat-icon-button>
-        <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
-    </button>
-    <button (click)="insertTextColumn()" class="add-column" style=" margin: -50px 65px;" matTooltip="add Text column"
-        matTooltipPosition="above" mat-icon-button aria-label="ranking">
-        <mat-icon style="font-size: 26px;" class="full-icon">view_list</mat-icon>
-    </button>
-    <button (click)="insertRadioColumn()" class="add-column" style="margin: -50px 95px;" matTooltip="add radio column"
-        matTooltipPosition="above" mat-icon-button aria-label="ranking">
-        <mat-icon style="font-size: 26px;" class="full-icon">radio_button_checked</mat-icon>
-    </button>
-    <button (click)="insertCommentBoxColumn()" class="add-column" style="margin: -50px 125px;"
-        matTooltip="add a Comment box column" matTooltipPosition="above" mat-icon-button aria-label="ranking">
-        <mat-icon style="font-size: 26px;" class="full-icon">wysiwyg</mat-icon>
-    </button>
-    <button (click)="insertRow()" class="add-column" style="margin: -50px 155px;" matTooltip="insert row"
-        matTooltipPosition="above" mat-icon-button aria-label="ranking">
-        <mat-icon style="font-size: 26px;" class="full-icon">vertical_distribute</mat-icon>
-    </button>
-    <button (click)="editSingleTableCells = !editSingleTableCells"
-        [ngClass]="(!editSingleTableCells)?'add-column':'add-column-active'" style="margin: -50px 195px;"
-        matTooltip="edit tabel cells" matTooltipPosition="above" mat-icon-button aria-label="ranking">
-        <mat-icon style="font-size: 26px;" class="full-icon">explicit</mat-icon>
-    </button>
-    <button (click)="dragRows = !dragRows" [ngClass]="(!dragRows)?'add-column':'add-column-active'"
-        style="margin: -50px  225px;" matTooltip="drag rows" matTooltipPosition="above" mat-icon-button
-        aria-label="ranking">
-        <mat-icon style="font-size: 26px;" class="full-icon">drag_indicator</mat-icon>
-    </button>
-    <button (click)="deleteRows = !deleteRows" [ngClass]="(!deleteRows)?'add-column':'add-column-active'"
-        style="margin: -50px 255px;" matTooltip="delete rows" matTooltipPosition="above" mat-icon-button
-        aria-label="ranking">
-        <mat-icon style="font-size: 26px;" class="full-icon">delete_outline</mat-icon>
-    </button>
-    <button (click)="isColumnResizerOn = !isColumnResizerOn"
-        [ngClass]="(!isColumnResizerOn)?'add-column':'add-column-active'" style="margin: -50px 290px;"
-        matTooltip="columns width" matTooltipPosition="above" mat-icon-button aria-label="ranking">
-        <mat-icon style="font-size: 26px;" class="full-icon">swap_horizontal_circle</mat-icon>
-    </button>
+<div *ngIf="bmxClientPageOverview" style="display: flex;
+    flex-direction: row-reverse;
+    justify-content: end;
+    right: 50px;border: 2px dashed #324395;padding-right: 10px;background: #ffffffd9;
+    position: absolute;height: 54px;align-items: center;padding-right: 38px;">
 
+    <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺RAGE INPUTS FOR COLUMN SETTINGS ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
+
+    <div *ngIf="isColumnResizerOn && bmxClientPageOverview" class="" style="    display: flex;
+    flex-direction: row;
+    justify-content: start;background: #ffffffd9;
+    gap: 50px;position: absolute;left: -950px;z-index: 1;border: 2px dashed #324395;">
+
+        <div style="display: flex;flex-direction: column;align-items: center;">
+            <p style="margin: 0 0 -12px;color: #324395;">columns width: {{bmxItem.componentSettings[0].columnWidth}} px
+            </p>
+            <input type="range" style="margin: 20px;width: 100px;"
+                [(ngModel)]="bmxItem.componentSettings[0].columnWidth" class="slider-font-size" tickInterval="1"
+                min="50" max="1000" [value]="bmxItem.componentSettings[0].columnWidth">
+        </div>
+        <div style="display: flex;flex-direction: column;align-items: center;">
+            <p style="margin: 0 0 -12px;color: #324395;">ratinale width: {{bmxItem.componentSettings[0].rationalewidth}}
+                px
+            </p>
+            <input type="range" style="margin: 20px;width: 100px;"
+                [(ngModel)]="bmxItem.componentSettings[0].rationalewidth" class="slider-font-size" tickInterval="1"
+                min="50" max="1000" [value]="bmxItem.componentSettings[0].rationalewidth">
+        </div>
+        <div style="display: flex;flex-direction: column;align-items: center;">
+            <p style="margin: 0 0 -12px;color: #324395;">font size: {{bmxItem.componentSettings[0].fontSize}} px</p>
+            <input type="range" style="margin: 20px;width: 100px;" [(ngModel)]="bmxItem.componentSettings[0].fontSize"
+                class="slider-font-size" tickInterval="1" min="2" max="40"
+                [value]="bmxItem.componentSettings[0].fontSize">
+        </div>
+        <div style="display: flex;flex-direction: column;align-items: center;">
+            <p style="margin: 0 0 -12px;color: #324395;">row height: {{bmxItem.componentSettings[0].rowHeight}} px</p>
+            <input type="range" style="margin: 20px;width: 100px;" [(ngModel)]="bmxItem.componentSettings[0].rowHeight"
+                class="slider-font-size" tickInterval="1" min="2" max="20"
+                [value]="bmxItem.componentSettings[0].rowHeight">
+        </div>
+        <div *ngIf="radioColumnCounter > 1" style="display: flex;flex-direction: column;align-items: center;">
+            <p style="margin: 0 0 -12px;color: #324395;">radio Columns width:
+                {{bmxItem.componentSettings[0].radioColumnsWidth}} px</p>
+            <input type="range" style="margin: 20px;width: 100px;"
+                [(ngModel)]="bmxItem.componentSettings[0].radioColumnsWidth" class="slider-font-size" tickInterval="1"
+                min="50" max="100" [value]="bmxItem.componentSettings[0].radioColumnsWidth">
+        </div>
+    </div>
+
+    <!-- <mat-slider min="200" max="500" step="10" value="200" [(value)]="bmxItem.componentSettings[0].columnWidth"></mat-slider><p>{{bmxItem.componentSettings[0].columnWidth}}</p> -->
+    <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺  END  ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
+
+    <div>
+        <button (click)="selectedIndex = ''" class="add-column" matTooltip="cancel" matTooltipPosition="above"
+            *ngIf="i === selectedIndex" mat-icon-button>
+            <mat-icon style="font-size: 25px;" class="full-icon">check_circle</mat-icon>
+        </button>
+        <button (click)="selectedIndex = i" class="add-column" matTooltip="edit table content & settings"
+            matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
+            <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
+        </button>
+        <button (click)="insertTextColumn()" class="add-column" matTooltip="add Text column" matTooltipPosition="above"
+            mat-icon-button aria-label="ranking">
+            <mat-icon style="font-size: 26px;" class="full-icon">view_list</mat-icon>
+        </button>
+        <button (click)="insertRadioColumn()" class="add-column" matTooltip="add radio column"
+            matTooltipPosition="above" mat-icon-button aria-label="ranking">
+            <mat-icon style="font-size: 26px;" class="full-icon">radio_button_checked</mat-icon>
+        </button>
+        <button (click)="insertCommentBoxColumn()" class="add-column" matTooltip="add a Comment box column"
+            matTooltipPosition="above" mat-icon-button aria-label="ranking">
+            <mat-icon style="font-size: 26px;" class="full-icon">wysiwyg</mat-icon>
+        </button>
+        <button (click)="insertRow()" class="add-column" matTooltip="insert row" matTooltipPosition="above"
+            mat-icon-button aria-label="ranking">
+            <mat-icon style="font-size: 26px;" class="full-icon">vertical_distribute</mat-icon>
+        </button>
+        <button (click)="editSingleTableCells = !editSingleTableCells"
+            [ngClass]="(!editSingleTableCells)?'add-column':'add-column-active'" matTooltip="edit tabel cells"
+            matTooltipPosition="above" mat-icon-button aria-label="ranking">
+            <mat-icon style="font-size: 26px;" class="full-icon">explicit</mat-icon>
+        </button>
+        <button (click)="dragRows = !dragRows" [ngClass]="(!dragRows)?'add-column':'add-column-active'"
+            matTooltip="drag rows" matTooltipPosition="above" mat-icon-button aria-label="ranking">
+            <mat-icon style="font-size: 26px;" class="full-icon">drag_indicator</mat-icon>
+        </button>
+        <button (click)="deleteRows = !deleteRows" [ngClass]="(!deleteRows)?'add-column':'add-column-active'"
+            matTooltip="delete rows" matTooltipPosition="above" mat-icon-button aria-label="ranking">
+            <mat-icon style="font-size: 26px;" class="full-icon">delete_outline</mat-icon>
+        </button>
+        <button (click)="isColumnResizerOn = !isColumnResizerOn"
+            [ngClass]="(!isColumnResizerOn)?'add-column':'add-column-active'" matTooltip="columns width"
+            matTooltipPosition="above" mat-icon-button aria-label="ranking">
+            <mat-icon style="font-size: 26px;    z-index: 9;" class="full-icon">swap_horizontal_circle</mat-icon>
+        </button>
+
+    </div>
 </div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  END  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
 
@@ -77,16 +128,24 @@
 
         <input type="text" [(ngModel)]="bmxItem.componentSettings[0].categoryName"
             [value]="bmxItem.componentSettings[0].categoryName"
-            style="font-size: 20px;color: #324395;padding-bottom: 10px;">
+            style="font-size: 20px;color: #324395;padding-bottom: 7px;padding-left: 10px;">
         <input type="text" [(ngModel)]="bmxItem.componentSettings[0].categoryDescription"
             [value]="bmxItem.componentSettings[0].categoryDescription"
-            style="font-size: 20px;color: #ee7f25;padding-bottom: 20px;">
+            style="font-size: 20px;color: #ee7f25;padding-bottom: 4px;padding-left: 7px;">
 
+        <div style="display: flex;flex-direction: column;justify-content: center;gap: 10px;">
+            <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MIN:
+                {{bmxItem.componentSettings[0].minRule}}</div>
+            <input type="range" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].minRule"
+                style="width:120px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].minRule">
+        </div>
+        <div style="display: flex;flex-direction: column;justify-content:center;gap: 10px;">
+            <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MAX:
+                {{bmxItem.componentSettings[0].maxRule}}</div>
+            <input type="range" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].maxRule"
+                style="width:120px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].maxRule">
+        </div>
 
-        MIN<input type="number" [(ngModel)]="bmxItem.componentSettings[0].minRule" style="width: 50px;"
-            [value]="bmxItem.componentSettings[0].minRule">
-        MAX<input type="number" [(ngModel)]="bmxItem.componentSettings[0].maxRule" style="width: 50px;"
-            [value]="bmxItem.componentSettings[0].maxRule">
 
     </div>
 
@@ -138,7 +197,10 @@
             </mat-radio-group>
             <hr> -->
         </div>
-
+        <button style="outline: none;color:#d35854;margin-bottom: 50px;" mat-icon-button (click)="selectedIndex = ''"
+            aria-label="ranking">
+            <mat-icon>cancel</mat-icon><br>Cancel
+        </button>
         <button style="outline: none;color:#76d354;margin-bottom: 50px;" mat-icon-button
             (click)="selectedIndex = '';upLoadNamesAndRationales(testNamesInput)" aria-label="ranking">
             <mat-icon>check_circle</mat-icon><br> DONE
@@ -151,49 +213,6 @@
 
 <!--🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑 RATING TABLE 🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑🥑-->
 
-
-<!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺RAGE INPUTS FOR COLUMN SETTINGS ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
-<div *ngIf="isColumnResizerOn && bmxClientPageOverview" class="" style="display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    width: 75%;
-    position: absolute;
-    top: -50px;
-    left: 40px;
-    border-radius: 15px;">
-
-    <div style="display: flex;flex-direction: column;align-items: center;">
-        <p style="margin: 0 0 -12px;color: grey;">columns width: {{bmxItem.componentSettings[0].columnWidth}} px</p>
-        <input type="range" style="margin: 20px;width: 140px;" [(ngModel)]="bmxItem.componentSettings[0].columnWidth"
-            class="slider-font-size" tickInterval="1" min="50" max="1000"
-            [value]="bmxItem.componentSettings[0].columnWidth">
-    </div>
-    <div style="display: flex;flex-direction: column;align-items: center;">
-        <p style="margin: 0 0 -12px;color: grey;">ratinale width: {{bmxItem.componentSettings[0].rationalewidth}} px</p>
-        <input type="range" style="margin: 20px;width: 140px;" [(ngModel)]="bmxItem.componentSettings[0].rationalewidth"
-            class="slider-font-size" tickInterval="1" min="50" max="1000"
-            [value]="bmxItem.componentSettings[0].rationalewidth">
-    </div>
-    <div style="display: flex;flex-direction: column;align-items: center;">
-        <p style="margin: 0 0 -12px;color: grey;">font size: {{bmxItem.componentSettings[0].fontSize}} px</p>
-        <input type="range" style="margin: 20px;width: 140px;" [(ngModel)]="bmxItem.componentSettings[0].fontSize"
-            class="slider-font-size" tickInterval="1" min="2" max="40" [value]="bmxItem.componentSettings[0].fontSize">
-    </div>
-    <div style="display: flex;flex-direction: column;align-items: center;">
-        <p style="margin: 0 0 -12px;color: grey;">row height: {{bmxItem.componentSettings[0].rowHeight}} px</p>
-        <input type="range" style="margin: 20px;width: 140px;" [(ngModel)]="bmxItem.componentSettings[0].rowHeight"
-            class="slider-font-size" tickInterval="1" min="2" max="20" [value]="bmxItem.componentSettings[0].rowHeight">
-    </div>
-    <div *ngIf="radioColumnCounter > 1" style="display: flex;flex-direction: column;align-items: center;">
-        <p style="margin: 0 0 -12px;color: grey;">radio Columns width:
-            {{bmxItem.componentSettings[0].radioColumnsWidth}} px</p>
-        <input type="range" style="margin: 20px;width: 140px;"
-            [(ngModel)]="bmxItem.componentSettings[0].radioColumnsWidth" class="slider-font-size" tickInterval="1"
-            min="50" max="100" [value]="bmxItem.componentSettings[0].radioColumnsWidth">
-    </div>
-</div>
-<!-- <mat-slider min="200" max="500" step="10" value="200" [(value)]="bmxItem.componentSettings[0].columnWidth"></mat-slider><p>{{bmxItem.componentSettings[0].columnWidth}}</p> -->
-<!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺  END  ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
 
 
 <!--💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲 TABLE GENERATOR 💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲💲-->
@@ -217,7 +236,7 @@
                 <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ RANK RENDERER ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
                 <div class="rank-column">
                     <div *ngIf="(y !== 0)">
-                         <!--☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️ DROP DOWN ☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️-->
+                        <!--☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️ DROP DOWN ☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️-->
                         <mat-form-field *ngIf="this.bmxItem.componentSettings[0].rankType == 'dropDown'"
                             appearance="outline" style="width: 130px;padding-top: 13px;height: 80px;">
                             <mat-label>Rank 1 to {{rankingScaleValue}}</mat-label>
@@ -229,13 +248,12 @@
                         </mat-form-field>
 
 
-                          <!--☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️ DRAG AND DROP ☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️-->      
-                        <button  *ngIf="this.bmxItem.componentSettings[0].rankType == 'dragAndDrop'" 
-                        mat-button style="background-color:#ee7f25 ;color: white; 
+                        <!--☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️ DRAG AND DROP ☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️-->
+                        <button *ngIf="this.bmxItem.componentSettings[0].rankType == 'dragAndDrop'" mat-button style="background-color:#ee7f25 ;color: white; 
                             animation: rubberBand 700ms ease-in  forwards;">{{y}}</button>
 
 
-                          <!--☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️ RADIO ☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️-->
+                        <!--☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️ RADIO ☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️☂️-->
                         <button
                             *ngIf="this.bmxItem.componentText[y].RATE && this.bmxItem.componentSettings[0].rankType == 'radio'"
                             mat-button
@@ -354,7 +372,8 @@
 <div class="mobile">
     <div style="display: flex;flex-direction: column;text-align: center;align-items: center;">
 
-        <div style="font-size: 25px;color: #324395;padding-bottom: 10px;margin: 5px;">{{bmxItem.componentSettings[0].categoryName}}
+        <div style="font-size: 25px;color: #324395;padding-bottom: 10px;margin: 5px;">
+            {{bmxItem.componentSettings[0].categoryName}}
         </div>
         <div style="font-size: 18px;color: #ee7f25;padding-bottom: 20px;margin: 10px;">
             {{bmxItem.componentSettings[0].categoryDescription}}</div>
@@ -369,7 +388,7 @@
         <div *ngFor="let testName of bmxItem.componentText; let y = index" style="margin-bottom: 10px;"
             [ngClass]="(y == 0)?'ROW-CERO':''">
 
-            <div class="test-name-table" *ngIf="(y != 0)" 
+            <div class="test-name-table" *ngIf="(y != 0)"
                 [style.touch-action]="(this.bmxItem.componentSettings[0].rankType == 'dragAndDrop')?'none':''"
                 [style.height]="(selectedCard == y && this.bmxItem.componentSettings[0].rankType == 'radio')?'200px':(selectedCard == y)?'':'45px'">
 
@@ -424,8 +443,7 @@
                         justify-content: center;">
                             <textarea *ngIf="y !== 0  && columnName.includes('Comments') == true && selectedCard == y"
                                 [style.width]="'95%'" [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
-                                cdkTextareaAutosize [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight" 
-                                style="text-align: center;height: 32px;width: 358px;font-size: 16px;border: 1px solid grey;
+                                cdkTextareaAutosize [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight" style="text-align: center;height: 32px;width: 358px;font-size: 16px;border: 1px solid grey;
                             animation: bounceIn 500ms ease-in forwards;padding: 0 4px;margin: 30px 0;" class="row-box"
                                 [(ngModel)]="testName[columnName]" placeholder="comments" rows="4" cols="50"></textarea>
                         </div>
